src/objects/Sync3__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync2__c</fullName>
        <label>Sync2</label>
        <referenceTo>Sync2__c</referenceTo>
        <relationshipLabel>Sync3</relationshipLabel>
        <relationshipName>Sync3</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sync3Email__c</fullName>
        <label>Sync3Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sync3Phone__c</fullName>
        <label>Sync3Phone</label>
        <type>Phone</type>
    </fields>
    <label>Sync3</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sync3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync3</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>